# internals/api/dtos/project_dto.go
@@ -1,0 +1,8 @@
+package dtos
+
+type ProjectDto struct {
+	UserId      int    `json:"UserId" binding:"required"`
+	Name        string `json:"Name" binding:"required"`
+	Description string `json:"Description"`
+	Options     string `json:"Options"` //Extra details
+}
